Fix table header wrapping issue

--- a/src/less/components/table.less
+++ b/src/less/components/table.less
@@ -1,3 +1,7 @@
 .ant-table-tbody {
   background: @monochrome-1;
 }
+
+.ant-table-column-has-filters {
+  white-space: nowrap;
+}
